ikona ksi a drobne buggy

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- icon -->
+    <link rel="shortcut icon" href="img/icon/ksi-icon-32x32.png">
+
     {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
