--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,9 @@
     <![endif]-->
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-    {{content-for 'body'}}
-
+    <div class="row">
+      {{content-for 'body'}}
+    </div>
     <script src="assets/vendor.js"></script>
     <script src="assets/ksi.js"></script>
 
