--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,15 @@
     <link rel="shortcut icon" href="img/icon/ksi-icon-32x32.png">
 
     {{content-for 'head'}}
-    
+
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ksi.css">
 
     <!-- Custom Fonts -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" />
+    <!-- loader -->
+    <link rel="stylesheet" href="http://css-spinners.com/css/spinner/dots.css" type="text/css">
+
 
     {{content-for 'head-footer'}}
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
