--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,10 @@
     <!-- loader -->
     <link rel="stylesheet" href="http://css-spinners.com/css/spinner/dots.css" type="text/css">
 
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
 
     {{content-for 'head-footer'}}
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
