--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,8 @@
     <script type="text/javascript"
         src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
+    
+    <noscript>Pro běh KSI je nutné zapnout javascript</noscript>
 
 
     {{content-for 'head-footer'}}
