Add page meta information.

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>KSI</title>
-    <meta name="description" content="">
+    <meta name="description" content="KSI je soutěž pro středoškoláky. Baví tě informatika? Zapoj se! Projdi naším spletitým grafem úloh a získej co nejvíce bodů.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="KSI,Korespondenční seminář z informatiky,FI,FI MU,FIMU,soutěž,student,středoškolák">
+    <meta name="author" content="Honza Mrázek,Heňo Lauko,Honza Horáček,Štoury">
 
     <!-- icon -->
     <link rel="shortcut icon" href="img/icon/ksi-icon-32x32.png">
