Include mathjax into server.

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
 
     <script type="text/javascript"
-        src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+        src="/js/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
 
     <script>
