--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" />
 
     <script type="text/javascript"
-        src="/js/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+        src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
 
     <script>
