nothing else matters

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
     </div>
     <script src="assets/vendor.js"></script>
     <script src="assets/ksi.js"></script>
+    <script src="js/arenaIframe.js"></script>
 
     {{content-for 'body-footer'}}
   </body>
