Include Matomo tracking

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 
     <noscript>Pro běh KSI je nutné zapnout javascript</noscript>
 
+    <script type="text/javascript" src="/js/matomo.js" async></script>
 
     {{content-for 'head-footer'}}
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
